<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <com.google.android.material.card.MaterialCardView
       android:id="@+id/cardKeratitis"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="16dp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="8dp"
           android:orientation="vertical">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/definition_keratitis"
               />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="8dp"
               android:textColor="@color/gray"
               android:text="@string/keratitis_take"
               />

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="8dp"
               android:layout_gravity="end"
               android:orientation="horizontal">

               <Button
                   android:id="@+id/btnGallery"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   style="@style/Widget.Material3.Button.TextButton.Icon"
                   app:icon = "@drawable/baseline_photo_library_24"
                   android:text="@string/gallery"/>

               <Button
                   android:id="@+id/btnCamera"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   style="@style/Widget.Material3.Button.TextButton.Icon"
                   app:icon = "@drawable/baseline_photo_camera_24"
                   android:text="@string/camera"/>

           </LinearLayout>
       </LinearLayout>

   </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardKeratitis"
        android:layout_margin="16dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"/>

    </com.google.android.material.card.MaterialCardView>

>



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/cardImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:text="@string/diagnosis" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="end"
                    android:textSize="14sp"
                    android:text="@string/kepercayaan" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/diagnosis" />

                <TextView
                    android:id="@+id/tvPercent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="end"
                    android:textSize="20sp"
                    android:text="@string/kepercayaan" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>